api: add task&answer

--- a/api.yaml
+++ b/api.yaml
@@ -9,9 +9,12 @@ tags:
     description: Operations about user
   - name: task
     description: Operations about task
+  - name: answer
+    description: Operations about answer
 schemes:
   - http
   - https
+
 paths:
   /user/signup:
     post:
@@ -84,6 +87,63 @@ paths:
           description: Password doesnot match account
         404:
           description: Not found account
+  /task/create:
+    post:
+      tags:
+        - task
+      summary: Create a task
+      description: ''
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              tid:
+                type: number
+              publisherId:
+                type: number
+              title:
+                type: string
+              description:
+                type: string
+              isQuestion:
+                type: boolean
+              startTime:
+                type: string
+                format: date-time
+              endTime:
+                type: string
+                format: date-time
+              reward:
+                type: number
+              numOfPeople:
+                type: number
+              question:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    isRequired:
+                      type: boolean
+                    questionType:
+                      type: string
+                      enum:
+                        - fill
+                        - single
+                        - multiple
+                    questionTitle:
+                      type: string
+                    option:
+                      type: array
+                      items:
+                        type: string
+      responses:
+        200:
+          description: Create task OK
+        400:
+          description: Not enough coin
   /task/page:
     get:
       tags:
@@ -138,6 +198,56 @@ paths:
                   type: number
         404:
           description: Not found page (pageId > pageNum)
+  /task/{taskId}:
+    get:
+      tags:
+        - task
+      summary: Get a task by tid
+      description: ''
+      parameters:
+        - name: taskId
+          in: path
+          description: The tid of task
+          required: true
+          type: integer
+      responses:
+        200:
+          description: OK, return all info
+          schema:
+            $ref: "#/definitions/Task"
+        404:
+          description: Not found task
+  /answer:
+    post:
+      tags:
+        - answer
+      summary: Post an answer
+      description: Post answer of a task(questionnaire)
+      parameters:
+        - name: answer
+          in: body
+          description: use 'tid' to find answerList, to insert answer
+          required: true
+          schema:
+            type: object
+            properties:
+              tid:
+                type: number
+              uid:
+                type: number
+              content:
+                type: array
+                items:
+                  type: string
+      responses:
+        200:
+          description: OK
+        404:
+          description: Not found task(questionnaire)
+  #
+#end paths
+
+# models
 definitions:
   User:
     type: object
@@ -176,6 +286,8 @@ definitions:
     type: object
     properties:
       tid:
+        type: number
+      publisherId:
         type: number
       title:
         type: string
@@ -224,11 +336,28 @@ definitions:
                 type: string
     xml:
       name: Task
+  AnswerList:
+    type: object
+    properties:
+      tid:
+        type: number
+      answer:
+        type: array
+        items:
+          type: object
+          properties:
+            uid:
+              type: string
+            content:
+              type: array
+              items:
+                type: string
   ApiResponse:
     type: object
     properties:
       message:
         type: string
+
 externalDocs:
   description: Find out more about Swagger
   url: 'http://swagger.io'
