--- a/api.yaml
+++ b/api.yaml
@@ -87,7 +87,7 @@ paths:
           description: Password doesnot match account
         404:
           description: Not found account
-  /task/create:
+  /task:
     post:
       tags:
         - task
@@ -144,60 +144,6 @@ paths:
           description: Create task OK
         400:
           description: Not enough coin
-  /task/page:
-    get:
-      tags:
-        - task
-      summary: Get count of pages
-      description: Count of pages = round( Count of task / 10 ); e.g. task 34, page 4
-      responses:
-        default:
-          description: return the integer of pageNum, 0 if no tasks
-          schema:
-            type: integer
-            example: 4
-  /task/{pageId}:
-    get:
-      tags:
-        - task
-      summary: Get an array of tasks
-      description: pageId is 0~n, get 10 tasks each page
-      parameters:
-        - name: pageId
-          in: path
-          description: The id of page, start from 0
-          required: true
-          type: integer
-      responses:
-        200:
-          description: OK, return 1~10 tasks
-          schema:
-            type: array
-            items:
-              type: object
-              properties:
-                tid:
-                  type: number
-                title:
-                  type: string
-                description:
-                  type: string
-                isQuestion:
-                  type: string
-                startTime:
-                  type: string
-                  format: date-time
-                endTime:
-                  type: string
-                  format: date-time
-                reward:
-                  type: number
-                coinPool:
-                  type: number
-                numOfPeople:
-                  type: number
-        404:
-          description: Not found page (pageId > pageNum)
   /task/{taskId}:
     get:
       tags:
@@ -217,28 +163,68 @@ paths:
             $ref: "#/definitions/Task"
         404:
           description: Not found task
-  /answer:
+  /tasks:
+    get:
+      tags:
+        - task
+      summary: Get tasks list and total page
+      description: ''
+      parameters:
+        - name: page
+          in: query
+          description: The id of page, start from 1
+          required: true
+          type: integer
+        - name: per_page
+          in: query
+          description: num of tasks per page
+          required: true
+          type: integer
+        - name: filter
+          in: query
+          description: "enum ['personal', 'organizational', 'participable'] (multiple)"
+          type: string
+        - name: sort
+          in: query
+          description: "enum ['time', 'coin'] (single)"
+          type: string
+      responses:
+        200:
+          description: OK, return {per_page} tasks
+          schema:
+            $ref: "#/definitions/TaskInfoList"
+        404:
+          description: Not found (page == 0 || page > total_page || invalid per_page)
+  /task/{taskId}/answer:
     post:
       tags:
         - answer
-      summary: Post an answer
-      description: Post answer of a task(questionnaire)
+      summary: Store an answer
+      description: Store answer of a task(questionnaire)
       parameters:
         - name: answer
           in: body
-          description: use 'tid' to find answerList, to insert answer
+          description: use taskId to find answerList, to insert answer
           required: true
           schema:
-            type: object
-            properties:
-              tid:
-                type: number
-              uid:
-                type: number
-              content:
-                type: array
-                items:
-                  type: string
+            $ref: "#/definitions/Answer"
+      responses:
+        200:
+          description: OK
+        404:
+          description: Not found task(questionnaire)
+    get:
+      tags:
+        - answer
+      summary: Store an answer
+      description: Store answer of a task(questionnaire)
+      parameters:
+        - name: answer
+          in: body
+          description: use taskId to find answerList, to insert answer
+          required: true
+          schema:
+            $ref: "#/definitions/Answer"
       responses:
         200:
           description: OK
@@ -344,19 +330,51 @@ definitions:
       answer:
         type: array
         items:
-          type: object
-          properties:
-            uid:
-              type: string
-            content:
-              type: array
-              items:
-                type: string
+          $ref: "#/definitions/Answer"
+  Answer:
+    type: object
+    properties:
+      uid:
+        type: string
+      content:
+        type: array
+        items:
+          type: string
   ApiResponse:
     type: object
     properties:
       message:
         type: string
+  TaskInfoList:
+    type: object
+    properties:
+      items:
+        type: array
+        items:
+          type: object
+          properties:
+            tid:
+              type: number
+            title:
+              type: string
+            description:
+              type: string
+            isQuestion:
+              type: boolean
+            startTime:
+              type: string
+              format: date-time
+            endTime:
+              type: string
+              format: date-time
+            reward:
+              type: number
+            coinPool:
+              type: number
+            numOfPeople:
+              type: number
+      total_page:
+        type: integer
 
 externalDocs:
   description: Find out more about Swagger
