修改user注册时，不可重名/email/phone 的msg返回

--- a/api.yaml
+++ b/api.yaml
@@ -57,9 +57,10 @@ paths:
         200:
           description: OK
         400:
-          description: email/phone exists, return error message
+          description: email/phone/name exists, return one of them to show error
           schema:
             type: string
+            enum: ['email', 'phone', 'name']
     get:
       tags:
         - user
