--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: 好吃易点/DFEO 分析与设计
+title: Earn It大学生钱袋网
 description: The documents about Software Analysis & Design Team Work
 theme: jekyll-theme-slate
