--- a/other/api.yaml
+++ b/other/api.yaml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  version: 0.5.0
+  version: 0.9.0
   title: Swagger Earnmoney
 host: localhost:3000
 basePath: '/'
@@ -404,6 +404,11 @@ paths:
       summary: Store an answer
       description: Store answer of a task(questionnaire)
       parameters:
+        - name: tid
+          in: path
+          description: the tid of the task
+          required: true
+          type: integer
         - name: body
           in: body
           description: use tid to find answerList, to insert answer
