--- a/07-designs/07-03-api/api.yaml
+++ b/07-designs/07-03-api/api.yaml
@@ -2,8 +2,7 @@ swagger: '2.0'
 info:
   version: 1.0.0
   title: Swagger Earnmoney
-host: localhost:3000
-basePath: '/'
+host: /api
 tags:
   - name: user
     description: Operations about user
